BUGG-160 Hide menu-toggle on wide screens, and add spacing.

--- a/sites/all/themes/bulmabug/css/bulma-bug.css
+++ b/sites/all/themes/bulmabug/css/bulma-bug.css
@@ -52,6 +52,18 @@ a:hover,
 .search-form input[type=submit]:hover { background-color: var(--green-dark); }
 
 /* --------------------- */
+/* ## MOBILE MENU
+/* --------------------- */
+
+.menu-toggle {
+  margin: 0.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .menu-toggle { display: none; }
+}
+
+/* --------------------- */
 /* ## NAVBAR
 /* --------------------- */
 /* Create new color options for the Bulma.io navbar element. */
